# Legends

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
assets/scenes/: dummy.yaml
assets/shaders/GL/: default.frag  default.vert
editor/: CMakeLists.txt
editor/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  RendererWidget.cpp  RendererWidget.h  main.cpp
framework/: CMakeLists.txt  Doxyfile
framework/include/Legends/: App.h  EventManager.h  Renderer.h  Surface.h
framework/src/: App.cpp  EventManager.cpp  Renderer.cpp  Surface.cpp
framework/src/SDL/: AppImpl_SDL.cpp  AppImpl_SDL.h  SurfaceImpl_SDL.cpp  SurfaceImpl_SDL.h
framework/src/linux/: AppImpl_linux.cpp  AppImpl_linux.h  SurfaceImpl_linux.cpp  SurfaceImpl_linux.h
framework/src/win32/: AppImpl_win32.cpp  AppImpl_win32.h  SurfaceImpl_win32.cpp  SurfaceImpl_win32.h
game/: CMakeLists.txt
game/src/: init.cpp  main.cpp
src/: config.h.in  init.cpp  main.cpp
src/core/: App.cpp  App.h  EventManager.cpp  EventManager.h  Log.cpp  Log.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  TaskManager.cpp  TaskManager.h  World.cpp  World.h
src/core/impl/: AppImpl_GLFW.cpp  AppImpl_GLFW.h  LogOutputImpl_ANSI.cpp  LogOutputImpl_ANSI.h  LogOutputImpl_Win32.cpp  LogOutputImpl_Win32.h
src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteRendererTask.cpp  SpriteRendererTask.h  Texture.cpp  Texture.h
src/graphics/impl/: MeshImpl_GL.cpp  MeshImpl_GL.h  RendererImpl_GL.cpp  RendererImpl_GL.h  ShaderImpl_GL.cpp  ShaderImpl_GL.h  TextureImpl_GL.cpp  TextureImpl_GL.h
